--- a/index.html
+++ b/index.html
@@ -142,6 +142,198 @@
   </section>
 <!-- End of about us page -->
 
+  <section class="about_section layout_padding-bottom">
+    <div class="container">
+      <div class="heading_container heading_center">
+        <h2>Songs of the Movie</h2>
+      </div>
+      <br>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/Badass.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6"><div class="detail-box">
+          <div class="heading_container">
+            <h2>Badass</h2>
+          </div>
+          <p>Badass is the soundtrack album composed by Anirudh Ravichander for the 2023 
+            Tamil-language film Leo, directed by Lokesh Kanagaraj starring Vijay, 
+            alongside Sanjay Dutt, Arjun and Trisha. The film is produced by 
+            S. S. Lalit Kumar under Seven Screen Studio.
+          </p>
+          <button id="audio1">Play Song</button>
+          <button id="pause1">Pause Song</button>
+        </div></div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="detail_container">
+              <div class="heading_container">
+                <h2>Lokiverse 2.0</h2>
+              </div>
+              <p>Lokiverse_2.0 is the soundtrack album composed by Anirudh Ravichander for the 2023 
+                Tamil-language film Leo, directed by Lokesh Kanagaraj starring Vijay, 
+                alongside Sanjay Dutt, Arjun and Trisha. The film is produced by 
+                S. S. Lalit Kumar under Seven Screen Studio.
+              </p>
+              <button id="audio2">Play Song</button>
+              <button id="pause2">Pause Song</button>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-5 ml-auto">
+            <div class="img-box">
+              <img src="images/Lokiverse_2.0.jpg" alt="">
+            </div> </div>
+        </div>
+      <br>
+      <br>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/Na_Ready.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6"><div class="detail-box">
+          <div class="heading_container">
+            <h2>Na Ready</h2>
+          </div>
+          <p>Na Ready is the soundtrack album composed by Anirudh Ravichander for the 2023 
+            Tamil-language film Leo, directed by Lokesh Kanagaraj starring Vijay, 
+            alongside Sanjay Dutt, Arjun and Trisha. The film is produced by 
+            S. S. Lalit Kumar under Seven Screen Studio.
+          </p>
+          <button id="audio3">Play Song</button>
+          <button id="pause3">Pause Song</button>
+        </div></div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="detail_container">
+              <div class="heading_container">
+                <h2>I'M Scared</h2>
+              </div>
+              <p>I'M Scared is the soundtrack album composed by Anirudh Ravichander for the 2023 
+                Tamil-language film Leo, directed by Lokesh Kanagaraj starring Vijay, 
+                alongside Sanjay Dutt, Arjun and Trisha. The film is produced by 
+                S. S. Lalit Kumar under Seven Screen Studio.
+              </p>
+              <button id="audio4">Play Song</button>
+              <button id="pause4">Pause Song</button>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-5 ml-auto">
+            <div class="img-box">
+              <img src="images/im_scared.jpg" alt="">
+            </div> </div>
+        </div>
+      <br>
+      <br>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/vy.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6"><div class="detail-box">
+          <div class="heading_container">
+            <h2>Villian Yaaru</h2>
+          </div>
+          <p>Villian Yaaru is the soundtrack album composed by Anirudh Ravichander for the 2023 
+            Tamil-language film Leo, directed by Lokesh Kanagaraj starring Vijay, 
+            alongside Sanjay Dutt, Arjun and Trisha. The film is produced by 
+            S. S. Lalit Kumar under Seven Screen Studio.
+          </p>
+          <button id="audio5">Play Song</button>
+          <button id="pause5">Pause Song</button>
+        </div></div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="detail_container">
+              <div class="heading_container">
+                <h2>Antony Das</h2>
+              </div>
+              <p>Antony Das is the soundtrack album composed by Anirudh Ravichander for the 2023 
+                Tamil-language film Leo, directed by Lokesh Kanagaraj starring Vijay, 
+                alongside Sanjay Dutt, Arjun and Trisha. The film is produced by 
+                S. S. Lalit Kumar under Seven Screen Studio.
+              </p>
+              <button id="audio6">Play Song</button>
+              <button id="pause6">Pause Song</button>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-5 ml-auto">
+            <div class="img-box">
+              <img src="images/ad.jpg" alt="">
+            </div> </div>
+        </div>
+      <br>
+      <br>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/hd.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6"><div class="detail-box">
+          <div class="heading_container">
+            <h2>Harold Das</h2>
+          </div>
+          <p>Harold Das is the soundtrack album composed by Anirudh Ravichander for the 2023 
+            Tamil-language film Leo, directed by Lokesh Kanagaraj starring Vijay, 
+            alongside Sanjay Dutt, Arjun and Trisha. The film is produced by 
+            S. S. Lalit Kumar under Seven Screen Studio.
+          </p>
+          <button id="audio7">Play Song</button>
+          <button id="pause7">Pause Song</button>
+        </div></div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="detail_container">
+              <div class="heading_container">
+                <h2>Odinary Person</h2>
+              </div>
+              <p>Odinary Person is the soundtrack album composed by Anirudh Ravichander for the 2023 
+                Tamil-language film Leo, directed by Lokesh Kanagaraj starring Vijay, 
+                alongside Sanjay Dutt, Arjun and Trisha. The film is produced by 
+                S. S. Lalit Kumar under Seven Screen Studio.
+              </p>
+              <button id="audio8">Play Song</button>
+              <button id="pause8">Pause Song</button>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-5 ml-auto">
+            <div class="img-box">
+              <img src="images/op.jpg" alt="">
+            </div> </div>
+        </div>
+    </div>
+  </section>
+
+
 <!-- contact section -->
 <section class="contact_section layout_padding">
   <div class="contact_bg_box">
@@ -309,7 +501,15 @@
   <script src="js/main.js"></script>
 
   <!--Audio of the website-->
-  <audio id="music1" src="Na_Ready.mp4"></audio>
+  <audio id="music1" src="music/Badass.mp3"></audio>
+  <audio id="music2" src="music/Lokiverse_2.0.mp3"></audio>
+  <audio id="music3" src="music/Na_Ready.mp4"></audio>
+  <audio src="music/ad.mp3" id="music4"></audio>
+  <audio src="music/hd.mp3" id="music5"></audio>
+  <audio src="music/im_scared.mp3" id="music6"></audio>
+  <audio src="music/op.mp3" id="music7"></audio>
+  <audio src="music/vy.mp3" id="music8"></audio>
+
 
 
 </body>
